--- a/WikiMovier/Views/Movie/Index.cshtml
+++ b/WikiMovier/Views/Movie/Index.cshtml
@@ -2,6 +2,14 @@
 @{
     ViewData["Title"] = "Movie";
 }
+<br/>
+<form asp-controller="Movie" asp-action="Index">
+	<p>
+		Title: <input type="text" name="query">
+		<input type="submit" value="Get" />
+	</p>
+</form>
+<br/>
 <div class="text-danger">Jeśli nie ma żadnego wyniku, upewnij się że wpisałeś/aś tytuł prawidłowo.</div>
 <p style="font-size: 40px;">@Model.Title</p>
 <p>Country: @Model.Country</p>
